--- a/src/pages/modal-addpet-error-red/modal-addpet-error-red.html
+++ b/src/pages/modal-addpet-error-red/modal-addpet-error-red.html
@@ -9,9 +9,12 @@
   <ion-content>
     <div class="div-container-modal">
       <div class="div-img-modal-add-pet">
-        <img src="../../assets/imgs/pet_add_error.svg" alt="" class="img-modal-add-pet">
+        <img src="../../assets/imgs/desconexion.svg" alt="" class="img-modal-add-pet">
       </div>
-      <div class="div-text-modal-add-pet">Ocurrió un error y no pudimos guardar tu foto.</div>
+      <div class="div-text-modal-add-pet">
+        ¡Ups! Hay problemas con tu conexión a internet.
+        Verifícala y vuelve a intentar
+      </div>
     </div>
     <div class="div-btn-modal-add-pet-listo">
       <button class="btn-modal-add-pet-listo" (click)="closeModal()">Probar otra vez</button>
