--- a/src/pages/modal-addpet-ok/modal-addpet-ok.html
+++ b/src/pages/modal-addpet-ok/modal-addpet-ok.html
@@ -11,7 +11,7 @@
       <div class="div-text-modal-add-pet">Tu mascota se agregó satisfactoriamente</div>
     </div>
     <div class="div-btn-modal-add-pet-listo">
-      <button class="btn-modal-add-pet-listo">Listo</button>
+      <button class="btn-modal-add-pet-listo" (click)="closeModal()">Listo</button>
     </div>
   </ion-content>
 </div>
