--- a/src/pages/pago-electronico/pago-electronico.html
+++ b/src/pages/pago-electronico/pago-electronico.html
@@ -19,9 +19,12 @@
           <div class="title-saldo-actual">Saldo actual</div>
           <hr class="hr-saldo">
         </div>
-        <div class="div-valor-saldo">$0</div>
-        <div class="div-btn-recargar-cuenta">
-          <button class="btn-recargar-cuenta">Recargar cuenta</button>
+        <div class="div-valor-saldo">$5,000</div>
+        <div class="div-btn-recargar  pagar">
+          <button class="btn-recargar pagar" (click)="openModalOk()">Pagar</button>
+        </div>
+        <div class="div-btn-recargar cuenta">
+          <button class="btn-recargar cuenta" (click)="openModalError()" >Recargar cuenta</button>
         </div>
         <div class="div-text-saldo">
           *Puedes recargar lo que quieras, se te descontará solo el valor por cada servicio finalizado.
@@ -31,7 +34,7 @@
       <div class="div-white">
         <div class="title-tarjeta">Paga con tarjeta de crédito</div>
         <div class="div-btn-recargar-cuenta">
-          <button class="btn-add-tarjeta">Agregar tarjeta de crédito</button>
+          <button class="btn-add-tarjeta" (click)="openModalConfirmarPaseo()">Agregar tarjeta de crédito</button>
         </div>
       </div>
 
