--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -33,7 +33,7 @@
       <ion-item class="form-login-pass">
         <a class="btn-recover-pass" href="">¿Olvidaste la contraseña?</a>
       </ion-item>
-      <button ion-button class="btn-send-form-login" type="submit" block>Entrar</button>
+      <button ion-button class="btn-send-form-login" type="submit" block style="font-family:LatoBold">Entrar</button>
 
     </form>
 
