--- a/src/pages/modal-pago-ok/modal-pago-ok.html
+++ b/src/pages/modal-pago-ok/modal-pago-ok.html
@@ -11,7 +11,7 @@
       <div class="div-text-modal-add-pet">¡Tu pago se registró exitosamente!</div>
     </div>
     <div class="div-btn-modal-add-pet-listo">
-      <button class="btn-modal-add-pet-listo" (click)="closeModal()">Listo</button>
+      <button class="btn-modal-add-pet-listo" (click)="navigateHome()">Listo</button>
     </div>
   </ion-content>
 </div>
