--- a/src/pages/pago-electronico/pago-electronico.html
+++ b/src/pages/pago-electronico/pago-electronico.html
@@ -26,9 +26,9 @@
         <div class="div-btn-recargar cuenta">
           <button class="btn-recargar cuenta" (click)="openModalError()" >Recargar cuenta</button>
         </div>
-        <div class="div-text-saldo">
+        <!-- <div class="div-text-saldo">
           *Puedes recargar lo que quieras, se te descontará solo el valor por cada servicio finalizado.
-        </div>
+        </div> -->
       </div>
 
       <div class="div-white">
