--- a/src/pages/resumen-pago/resumen-pago.html
+++ b/src/pages/resumen-pago/resumen-pago.html
@@ -66,7 +66,7 @@
     </div>
 
     <div class="div-btn-modal-programar-paseo">
-      <button class="btn-programar-paseo">Pagar y programar paseo</button>
+      <button class="btn-programar-paseo" (click)="navigateHome()">Pagar y programar paseo</button>
     </div>
   </div>
 </ion-content>
