--- a/src/pages/walk-type/walk-type.html
+++ b/src/pages/walk-type/walk-type.html
@@ -15,9 +15,13 @@
         <div class="text-walk">Paseo de 30 Min.</div>
         <div class="price-walk">$6.500</div>
       </div>
-      <div class="opc-walk">
+      <div class="opc-walk recomendado">
         <div class="text-walk">Paseo de 1 hora</div>
         <div class="price-walk">$9.500</div>
+        <div class="div-recomendado">
+          <div class="img-star"><img src="../../assets/icon/ic_star.svg" alt="" class="icon-star"></div>
+          <div class="text-recomendado">Recomendado</div>
+        </div>
       </div>
       <div class="opc-walk">
         <div class="text-walk">Paseo de 2 horas</div>
