--- a/src/pages/add-form/add-form.html
+++ b/src/pages/add-form/add-form.html
@@ -9,15 +9,15 @@
 <ion-content>
 <div class="container-add">
   <div class="title-add">Queremos conocer a tu mascota</div>
-  <div class="div-form-add">
-      <form #form="ngForm" class="form-add-pet" (ngSubmit)="navigateToOtherPage('ok')" novalidate>
+  <div class="div-form-add">    
+      <form [formGroup]="form" class="form-add-pet" (ngSubmit)="navigateToOtherPage('ok')">
           <ion-item>
             <!-- <ion-label>Nombre</ion-label> -->
-            <ion-input class="item-add-pet-input" type="text" required ngControl="name" class="placeholder-black" placeholder="Nombre"></ion-input>
+            <ion-input class="item-add-pet-input" formControlName="nombre" type="text" required ngControl="name" class="placeholder-black" placeholder="Nombre"></ion-input>
           </ion-item>
           <ion-item class="item-add-pet">
             <!-- <ion-label>Raza</ion-label> -->
-            <ion-select placeholder="Raza">
+            <ion-select placeholder="Raza" formControlName="raza">
               <ion-option>Bulldog</ion-option>
               <ion-option >Pug</ion-option>
               <ion-option >Beagle</ion-option>
@@ -26,7 +26,7 @@
           <div class="div-fecha">
             <ion-item class="item-add-pet">
               <!-- <ion-label position="floating"><img src="../../assets/imgs/img_calendar.svg" alt=""></ion-label> -->
-              <ion-datetime placeholder="Fecha de Nacimiento" displayFormat="MM/DD/YYYY" min="1994-03-14" max="2012-12-09"></ion-datetime>            
+              <ion-datetime formControlName="fecha" placeholder="Fecha de Nacimiento" displayFormat="MM/DD/YYYY" min="1994-03-14" max="2012-12-09"></ion-datetime>            
             </ion-item>
             <div class="div-icon-calendar"><img src="../../assets/icon/calendar.svg" alt="" class="icon-calendar"></div>
           </div>
@@ -36,10 +36,10 @@
               <img src="../../assets/imgs/pet_selected.svg" alt="" class="icon-photo-added">
               <div class="txt-photo-added">Foto agregada</div>
             </div>
-            <div class="btn-galeria">Ver galería<ion-icon class="icon-foto" name="images"></ion-icon></div>
-            <div class="btn-galeria" style="float:right">Tomar foto<ion-icon class="icon-foto" name="camera"></ion-icon></div>
+            <div class="btn-galeria">Ver galería<img class="icon-foto" src="../../assets/icon/icon_galeria.svg"></div>
+            <div class="btn-galeria" style="float:right">Tomar foto<img src="../../assets/icon/icon_camara.svg" alt="" class="icon-foto"></div>
           </ion-item>
-          <button ion-button class="btn-send-form" type="submit" block>Guardar</button>
+          <button ion-button class="btn-send-form" type="submit" [disabled]=!this.form.valid block>Guardar</button>
         </form>
         <button ion-button class="btn-send-form" type="button" (click)="navigateToOtherPage('error')" block>Modal Error</button>
         <button ion-button class="btn-send-form" type="button" (click)="navigateToOtherPage('error-red')" block>Modal Error</button>
