--- a/src/pages/modal-confirmar-paseo-efectivo/modal-confirmar-paseo-efectivo.html
+++ b/src/pages/modal-confirmar-paseo-efectivo/modal-confirmar-paseo-efectivo.html
@@ -1,6 +1,6 @@
 <div class="container-modal">
   <ion-header>
-    <button class="btn-back-close-modal" (click)="closeModal()"><ion-icon name="close"></ion-icon></button>
+    <button class="btn-back-close-modal" (click)="navigateHome()"><ion-icon name="close"></ion-icon></button>
   </ion-header>
 
   <ion-content>
@@ -9,8 +9,8 @@
         <img src="../../assets/imgs/paseo_ok.svg" alt="" class="img-modal-add-pet">
       </div>
       <div class="div-text-modal-ok-paseo">
-        Tu programación se realizó exitosamente. <br>Te avisaremos 
-        cuando un paseador cercano confirme el servicio.
+        ¡Nos vamos de paseo! Te avisaremos cuando uno de nuestros paseadores acepte tu solicitud. 
+        Recuerda pagarle ($6.500) al paseador cada que este haya finalizado el paseo de tu mascota.
       </div>
     </div>
     <div class="div-btn-modal-add-pet-listo">
