--- a/src/pages/pago-electronico/pago-electronico.html
+++ b/src/pages/pago-electronico/pago-electronico.html
@@ -2,7 +2,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title class="title-add-mascota">Pago Electrónico</ion-title>
-    <button ion-button class="btn-back-close" (click)="navigateToOtherPage('close')"><ion-icon name="close"></ion-icon></button>
+    <button ion-button class="btn-back-close" (click)="navigateToOtherPage()"><ion-icon name="close"></ion-icon></button>
   </ion-navbar>
 </ion-header>
 
