--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -101,8 +101,24 @@
         </div>
       </div>
     </div>
-
-
+  </div>
+</div>
+<div class="div-footer">
+  <div class="div-item-footer">
+    <div class="img-footer"><img src="../../assets/icon/ic_home_1.svg" alt=""></div>
+    <div class="text-footer">Home</div>
+  </div>
+  <div class="div-item-footer">
+    <div class="img-footer"><img src="../../assets/icon/ic_home_2.svg" alt=""></div>
+    <div class="text-footer">Pagos</div>
+  </div>
+  <div class="div-item-footer">
+    <div class="img-footer"><img src="../../assets/icon/ic_home_3.svg" alt=""></div>
+    <div class="text-footer">Programaciones</div>
+  </div>
+  <div class="div-item-footer">
+    <div class="img-footer"><img src="../../assets/icon/ic_home_4.svg" alt=""></div>
+    <div class="text-footer">Perfil</div>
   </div>
 </div>
 </ion-content>
