--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the HomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
@@ -15,6 +9,37 @@
 
 <ion-content>
 <div class="container-home">
+
+  <div class="div-container-recorrido">
+    <div class="title-recorrido">En este momento</div>
+
+    <div class="div-content-recorrido">
+
+      <div class="div-mascota-recorrido">
+        <img src="../../assets/imgs/img-recorrido-mascota-paseador.png" alt="">
+        <!-- <div class="div-img-mascota-recorrido">
+          <img src="../../assets/imgs/tobias.png" alt="" class="img-mascota-recorrido">
+        </div>
+        <div class="div-text-mascota-recorrido">
+          <div class="item-nombre-mascota-recorrido">Tobias</div>
+          <div class="item-estado-mascota-recorrido">
+            <div class="div-titulo-estado">Estado:</div>
+            <div class="div-valor-estado">
+              <div class="div-img-estado"><img src="../../assets/icon/ic_estado_1.svg" alt="" class="img-estado"></div>
+              <div class="div-estado">En paseo</div>
+            </div>
+          </div>          
+          <div class="item-nombre-mascota-recorrido">Tobias</div>
+        </div>
+      </div>
+      <div class="div-img-recorrido"></div>
+      <div class="div-paseador-recorrido"></div> -->
+      </div>
+    </div>
+
+  </div>
+
+
   <div class="div-text-home">
     <div class="txt-home">¡Hola! ¿Qué tál un paseo para hoy?</div>
   </div>
