--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div class="container-hello">
-    <div class="btn-help-home">Ayuda</div>
+    <div class="btn-help-home" (click)="openModalAyuda()" >Ayuda</div>
     <div class="div-logo-waky">
       <img src="./assets/imgs/logo.svg" alt="" />
     </div>
