--- a/src/pages/wakymail/wakymail.html
+++ b/src/pages/wakymail/wakymail.html
@@ -1,3 +1,4 @@
+<ion-content>
 <div class="div-container-mail">
   <div class="div-content-mail">
     <div class="div-header-mail">
@@ -71,3 +72,5 @@
     </div>    
   </div>
 </div>
+
+</ion-content>
