--- a/src/pages/pago-electronico/pago-electronico.html
+++ b/src/pages/pago-electronico/pago-electronico.html
@@ -46,7 +46,7 @@
           <img src="../../assets/icon/ic_arrow_down.svg" alt="" class="icon-arrox-next">
         </div>
         <div class="div-btn-nueva-tarjeta">
-          <button class="btn-nueva-add-tarjeta" (click)="openModalErrorPago()">Agregar</button>
+          <button class="btn-nueva-add-tarjeta" (click)="openModalCalificarRetro()">Agregar</button>
         </div>
       </div>
 
