--- a/src/pages/perfil-paseador/perfil-paseador.html
+++ b/src/pages/perfil-paseador/perfil-paseador.html
@@ -52,10 +52,55 @@
       </div>
     </div>
 
-    <div class="div-galeria-caminata">
-      <div class="titulo">Algunas fotos de sus caminatas</div>
+  </div>
+
+  <div class="div-galeria-caminata">
+    <div class="titulo">Algunas fotos de sus caminatas</div>
+    <div class="text-sin-fotos">
+      Este paseador no tiene fotos para mostrar
     </div>
-
-
+    <!-- <div class="slider-paseo">
+      <ion-slides pager="true">
+        <ion-slide>
+          <div class="div-slide">
+            <div class="div-image-slide">
+              <img src="../../assets/imgs/paseos/paseo1.png" alt="" class="img-slide">                
+            </div>
+            <div class="div-image-slide">
+              <img src="../../assets/imgs/paseos/paseo2.png" alt="" class="img-slide">                
+            </div>
+            <div class="div-image-slide">
+              <img src="../../assets/imgs/paseos/paseo3.png" alt="" class="img-slide">                
+            </div>
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="div-slide">
+            <div class="div-image-slide">
+              <img src="../../assets/imgs/paseos/paseo1.png" alt="" class="img-slide">                
+            </div>
+            <div class="div-image-slide">
+              <img src="../../assets/imgs/paseos/paseo2.png" alt="" class="img-slide">                
+            </div>
+            <div class="div-image-slide">
+              <img src="../../assets/imgs/paseos/paseo3.png" alt="" class="img-slide">                
+            </div>
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="div-slide">
+            <div class="div-image-slide">
+              <img src="../../assets/imgs/paseos/paseo1.png" alt="" class="img-slide">                
+            </div>
+            <div class="div-image-slide">
+              <img src="../../assets/imgs/paseos/paseo2.png" alt="" class="img-slide">                
+            </div>
+            <div class="div-image-slide">
+              <img src="../../assets/imgs/paseos/paseo3.png" alt="" class="img-slide">                
+            </div>
+          </div>            
+        </ion-slide>
+      </ion-slides>
+    </div> -->
   </div>
 </ion-content>
