--- a/src/pages/detalles-paseo/detalles-paseo.html
+++ b/src/pages/detalles-paseo/detalles-paseo.html
@@ -35,7 +35,24 @@
   </div>
 
   <div class="titulo">Sobre el paseador:</div>
-  <div class="div-paseador"></div>
+  <div class="div-paseador">
+    <div class="div-img-paseador">
+      <img src="../../assets/fotos_perfil/2891_laura_duque@3x.png" alt="" class="img-paseador">
+      <img src="../../assets/icon/icon_patita.svg" alt="" class="img-patita-paseador">
+    </div>
+    <div class="div-datos-paseador">        
+      <div class="nombre-paseador">Melissa Duque</div>
+      <div class="nro-paseos">Nº paseos realizados: 12</div>
+      <div class="calif-paseador">
+        <div class="text-calif">Calificación: 4.7 </div>
+        <img class="img-star-paseador" src="../../assets/icon/ic_star.svg" alt="">
+      </div>          
+    </div>   
+    <div class="div-arrow-next">
+      <img src="../../assets/icon/arrow_next.svg" alt="" class="img-arrow">
+    </div>   
+  </div>
+  
 
   <div class="titulo">Ubicación del paseo:</div>
   <div class="div-recorrido-paseo">
