--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,8 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <div class="img-logo"><img src="../../assets/icon/logo_wakypet.svg" alt=""></div>
+    
   </ion-navbar>
 </ion-header>
 
@@ -14,10 +15,8 @@
     <div class="title-recorrido">En este momento</div>
 
     <div class="div-content-recorrido">
-
-      <div class="div-mascota-recorrido">
-        <img src="../../assets/imgs/img-recorrido-mascota-paseador.png" alt="">
-        <!-- <div class="div-img-mascota-recorrido">
+      <div class="div-mascota-recorrido">        
+        <div class="div-img-mascota-recorrido">
           <img src="../../assets/imgs/tobias.png" alt="" class="img-mascota-recorrido">
         </div>
         <div class="div-text-mascota-recorrido">
@@ -26,15 +25,29 @@
             <div class="div-titulo-estado">Estado:</div>
             <div class="div-valor-estado">
               <div class="div-img-estado"><img src="../../assets/icon/ic_estado_1.svg" alt="" class="img-estado"></div>
-              <div class="div-estado">En paseo</div>
+              <div class="div-estado">En curso</div>
             </div>
-          </div>          
-          <div class="item-nombre-mascota-recorrido">Tobias</div>
+          </div>                    
+          <div class="item-fecha-mascota-recorrido">Fecha: 21/03/2020 - Hora: 1:00 p.m</div>
         </div>
       </div>
-      <div class="div-img-recorrido"></div>
-      <div class="div-paseador-recorrido"></div> -->
+      <div class="div-img-recorrido">
+        <img src="../../assets/imgs/img_mapa.svg" alt="" class="img-recorrido">
       </div>
+      <div class="div-paseador-recorrido">
+        <div class="div-img-paseador"><img src="../../assets/fotos_perfil/2891_laura_duque@3x.png" alt="" class="img-paseador"></div>
+        <div class="div-datos-paseador">
+          <div class="div-nombre-calif">
+            <div class="nombre-paseador">Melissa Duque / </div>
+            <div class="calif-paseador">4.7</div>
+            <div class="div-img-calif"><img src="../../assets/icon/ic_star.svg" alt=""></div>
+          </div>
+          <div class="div-btn-ver-perfil-paseador">
+            <button class="btn-ver-perfil-paseador">Ver perfil paseador</button>
+          </div>
+        </div>     
+        <div class="div-btn-ver"><button class="btn-ver">Ver</button></div>   
+      </div>      
     </div>
 
   </div>
