--- a/src/pages/modal-conf-delete-mascota/modal-conf-delete-mascota.html
+++ b/src/pages/modal-conf-delete-mascota/modal-conf-delete-mascota.html
@@ -1,15 +1,10 @@
-<!--
-  Generated template for the ModalConfDeleteMascotaPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>modal-conf-delete-mascota</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-
-</ion-content>
+<div class="main">
+  <div class="title-error-saldo">Confirmación</div>
+  <div class="text-error-saldo">
+    Estas seguro que quieres eliminar esta mascota
+  </div>
+  <div class="div-btns-delete-mascota">  
+    <button class="btn-eliminar aceptar">Cancelar</button>        
+    <button class="btn-eliminar cancelar">Aceptar</button>
+  </div>  
+</div>
