titulo pre consulta

--- a/veterinarios/corporate.html
+++ b/veterinarios/corporate.html
@@ -244,7 +244,7 @@
                         <div class="rounded bg-contrast shadow-box image-background p-4" style="box-shadow: 1px 3px 6px 3px #d6d6d6;
                         border-radius: 15px !important; height: 100% !important;">
                             <div class="div-cont-text-consulta">
-                                <h4 class="title-consulta-full">1. Video consulta</h4>
+                                <h4 class="title-consulta-full">1. Pre-consulta Online</h4>
                                 <div class="div-consulta">                                    
                                     <div class="div-imagen-consulta">
                                         <img src="img/consulta_2.png" style="width:100%" alt="" class="img-consulta">
