--- a/veterinarios/corporate.html
+++ b/veterinarios/corporate.html
@@ -244,13 +244,33 @@
                         <div class="rounded bg-contrast shadow-box image-background p-4" style="box-shadow: 1px 3px 6px 3px #d6d6d6;
                         border-radius: 15px !important; height: 100% !important;">
                             <div class="div-cont-text-consulta">
-                                <h4 class="title-consulta-full">1. Pre-consulta Online</h4>
+                                <h4 class="title-consulta-full">1. Consulta Express Online</h4>
                                 <div class="div-consulta">                                    
                                     <div class="div-imagen-consulta">
-                                        <img src="img/consulta_2.png" style="width:100%" alt="" class="img-consulta">
+                                        <img src="img/consulta_3.png" style="width:100%" alt="" class="img-consulta">
                                     </div>
                                     <div class="div-text-consulta">
-                                        <h4 class="title-consulta-mobile">1. Video consulta</h4>
+                                        <h4 class="title-consulta-mobile">1. Consulta Express Online</h4>
+                                        <p class="text-secondary mb-0" style="margin:20px 0 10px 0!important; font-size:70% !important">
+                                            Aplica para asesoría simple, entre 5 - 7 minutos. Ejm: nombre o precios de medicamentos, recomendaciones, instrucciones o cuidados para tu mascota. Se realizará a través de videollamada. 
+                                        </p>
+                                        <h7 style="font-weight:600">Precio: $10.000</h7>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="rounded bg-contrast shadow-box image-background p-4" style="box-shadow: 1px 3px 6px 3px #d6d6d6;
+                        border-radius: 15px !important; height: 100% !important;">
+                            <div class="div-cont-text-consulta">
+                                <h4 class="title-consulta-full">2. Pre-consulta Online</h4>
+                                <div class="div-consulta">                                    
+                                    <div class="div-imagen-consulta">
+                                        <img src="img/consulta_1.png" style="width:100%" alt="" class="img-consulta">
+                                    </div>
+                                    <div class="div-text-consulta">
+                                        <h4 class="title-consulta-mobile">2. Pre-consulta Online</h4>
                                         <p class="text-secondary mb-0" style="margin:20px 0 10px 0!important; font-size:70% !important">
                                             Tendrás una conversación previa con el médico veterinario a 
                                             través de video llamada, podrás resolver dudas y tener una asesoría personalizada con el 
@@ -266,13 +286,13 @@
                         <div class="rounded bg-contrast shadow-box image-background p-4" style="box-shadow: 1px 3px 6px 3px #d6d6d6;
                         border-radius: 15px !important">
                             <div class="div-cont-text-consulta">                                
-                                <h4 class="title-consulta-full">2. Consulta Presencial</h4>
+                                <h4 class="title-consulta-full">3. Consulta Presencial</h4>
                                 <div class="div-consulta">
                                     <div class="div-imagen-consulta">
                                         <img src="img/consulta_2.png" style="width:100%" alt="" class="img-consulta">
                                     </div>
                                     <div class="div-text-consulta">
-                                        <h4 class="title-consulta-mobile">2. Consulta Presencial</h4>
+                                        <h4 class="title-consulta-mobile">3. Consulta Presencial</h4>
                                         <p class="text-secondary mb-0" style="margin:20px 0 10px 0!important; font-size:70% !important">
                                             Si no es posible solucionar la condición de tu mascota a través de videollamada, 
                                             nuestro médico veterinario se desplazará con todas las herramientas necesarias hasta tu ubicación. 
@@ -285,7 +305,29 @@
                                 </div>
                             </div>
                         </div>
-                    </div>              
+                    </div> 
+                    <div class="col-md-6">
+                        <div class="rounded bg-contrast shadow-box image-background p-4" style="box-shadow: 1px 3px 6px 3px #d6d6d6;
+                        border-radius: 15px !important">
+                            <div class="div-cont-text-consulta">                                
+                                <h5 class="title-consulta-full">4. Aplicación de vacunas o medicamentos:</h5>
+                                <div class="div-consulta">
+                                    <div class="div-imagen-consulta">
+                                        <img src="img/consulta_4.png" style="width:100%" alt="" class="img-consulta">
+                                    </div>
+                                    <div class="div-text-consulta">
+                                        <h4 class="title-consulta-mobile">4. Aplicación de vacunas o medicamentos:</h4>
+                                        <p class="text-secondary mb-0" style="margin:20px 0 10px 0!important; font-size:70% !important">
+                                            Nuestros especialistas se desplazarán hasta tu domicilio para realizar el procedimiento de aplicación de vacunas o medicamentos a tu mascota. 
+                                        </p>
+                                        <h7 style="font-weight:600"> Precio: $30.000</h7>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+                                 
                 </div>
                 <div class="row row-aclaracion-consulta">
                     <div class="text" style="font-size: .83rem;">                        
