--- a/veterinarios/corporate.html
+++ b/veterinarios/corporate.html
@@ -167,7 +167,7 @@
     </nav>
     <main>
         <header class="header section parallax image-background center-bottom cover gradient alpha-8 text-contrast">
-            <div class="container overflow-hidden" style="padding-top:103px">
+            <div class="container overflow-hidden">
                 <div class="row align-items-end">
                     <div class="col-lg-4 text-header-full">
                         <h2 class="bold">¿Necesitas una consulta para tu mascota?</h2>
@@ -364,8 +364,8 @@
         <section class="singl-testimonial shadow">
             <div class="container-fluid py-0">
                 <div class="row align-items-center gradient gradient-navy-blue text-contrast">
-                    <div class="col-md-7 image-background cover center-top" style="background-image: url(img/img-medidas.png);"></div>
-                    <div class="col-md-3 mobile" style="padding: 0 !important;">
+                    <div class="col-md-7 image-background cover center-top img-medidas-full" style="background-image: url(img/img-medidas.png);"></div>
+                    <div class="col-md-3 img-medidas-mobile" style="padding: 0 !important;">
                         <img src="img/img-medidas.png" alt="" style="width: 100%">
                     </div>
                     <div class="col-md-3 mx-auto py-4 py-md-0">
