--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -39,7 +39,7 @@
                 <a class="btn-recover-pass" href="" style="font-size:1.5rem !important; white-space: normal;">Aceptar términos y condiciones y política de privacidad</a>
               </ion-label>
             </ion-item>
-            <button ion-button class="btn-send-form-register" type="submit" block>Listo</button>
+            <button ion-button class="btn-send-form-register" type="submit">Listo</button>
           </form>
     </div>
   </div>
