--- a/principal/landing.html
+++ b/principal/landing.html
@@ -63,7 +63,7 @@
                 </li>
             </ul> -->
         <ul class="st-nav-menu nav navbar-nav">
-                <li class="st-nav-section nav-item"><a href="#main" class="navbar-brand"><img src="img/nuevo/logo_wakypet.svg" alt="Dashcore" class="logo logo-sticky"></a></li>
+                <li class="st-nav-section nav-item"><a href="#main" class="navbar-brand"><img src="img/nuevo/logo_cortado.png" alt="Dashcore" class="logo logo-sticky"></a></li>
                 
                 <li class="st-nav-section st-nav-primary stick-right nav-item"><a class="st-root-link nav-link" href=" https://wakypet.com/contactanos" target="_blank">Contáctanos </a>
                 <li class="st-nav-section st-nav-secondary nav-item">
@@ -229,14 +229,14 @@
                             la protección de Sura, además conoce nuestro <span style="font-weight: 900;">nuevo servicio de 
                             consulta de veterinaria virtual o en casa.</span>
                         </p>
-                        <div class="hero-form row"  style="background: none !important; display: flex;">
+                        <div class="hero-form btns-responsive"  style="background: none !important;">
                             <a href="https://itunes.apple.com/us/app/wakypet/id1353926391?l=es&ls=1&mt=8" 
-                            class="nav-link py-3 px-4 btn btn-rounded btn-download btn-dark text-contrast mr-0 mr-md-4 mb-4 mb-md-0" style="border-radius: 40px;">
+                            class="btn-download-responsive nav-link py-3 px-4 btn btn-rounded btn-download btn-dark text-contrast mr-0 mr-md-4 mb-4 mb-md-0" style="border-radius: 40px;">
                             <img src="img/svg/apple.svg" class="icon icon-md" alt="...">
                                 <p class="ml-2"><span class="small bold">Obtenla ahora en</span> <span class="d-block bold text-contrast">App Store</span></p>
                             </a>
                             <a href="https://play.google.com/store/apps/details?id=com.wakypetapp.cliente" 
-                            class="nav-link py-3 px-4 btn btn-rounded btn-download btn-light text-darker" 
+                            class="btn-download-responsive nav-link py-3 px-4 btn btn-rounded btn-download btn-light text-darker" 
                             style="border-radius: 40px; border-radius: 40px; border: solid 1px var(--gray); background-color: var(--light);">
                                 <img src="img/svg/google-play.svg" class="icon icon-md" alt="...">
                                 <p class="ml-2"><span class="small bold">Descárgala en</span> <span class="d-block bold text-darker">Google Play</span></p>
