--- a/src/pages/add-paseo/add-paseo.html
+++ b/src/pages/add-paseo/add-paseo.html
@@ -119,7 +119,14 @@
         </button>
       </div>
       <div class="div-btn-programar-paseo">
-        <button class="btn-programar" (click)="navigateToOtherPage('ok-pago')">Programar</button>
+        <button class="btn-programar" (click)="navigateToOtherPage('ok-pago')">Actualizar Paseo</button>
+      </div>
+      <div class="div-cancelar">
+        <button class="btn-cancelar">Cancelar programación</button>
+      </div>
+      <div class="div-pausar-container flex">
+        <div class= "div-pausar">Detener programación</div>
+        <div class="div-btn-pausar"></div>
       </div>
     </form>
   </div>
