--- a/src/pages/pago-electronico/pago-electronico.html
+++ b/src/pages/pago-electronico/pago-electronico.html
@@ -50,6 +50,24 @@
         </div>
       </div>
 
+      <div class="div-white">
+        <div class="title-tarjetas-vinculadas">Movimientos recientes</div>
+          <div class="div-item-mov">
+            <div class="item-mov">
+              <div class="saldo-mov">Recarga de $10.000,00</div>
+              <div class="fecha-mov">12-03-2020 8:11 p.m</div>
+            </div>
+            <div class="item-mov">
+              <div class="saldo-mov">Recarga de $10.000,00</div>
+              <div class="fecha-mov">12-03-2020 8:11 p.m</div>
+            </div>
+            <div class="item-mov">
+              <div class="saldo-mov">Recarga de $10.000,00</div>
+              <div class="fecha-mov">12-03-2020 8:11 p.m</div>
+            </div>
+          </div>
+        </div>
+
     </div>
   </div>
 </ion-content>
